# biye

./: README.md
client/build-FXChat_Client-Desktop-Debug/: FXChat_Client  Makefile  moc_mainwindow.cpp
client/src/: FXChat_Client.pro  clientdb.cpp  clientdb.h  config.cpp  config.h  default.cfg  fxclient.cpp  fxclient.h  fxconnection.cpp  fxconnection.h  fxmessage.cpp  fxmessage.h  icons.qrc  linearmemorypool.cpp  linearmemorypool.h  main.cpp  mainwindow.ui  memorypool.h
client/src/structs/: chatlog.h  department.h  user.h
client/src/ui/: chatingwindow.cpp  chatingwindow.h  chatingwindow.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
doc/: 任务书.doc  外文翻译.doc  客户端数据库.sql  应用协议.txt  开题报告.doc  开题报告.pptx  数据库.sql  文献综述.doc  测试数据.sql
server/: CMakeLists.txt  mysqlconnectionpool.cpp  mysqlconnectionpool.h
server/src/: CMakeLists.txt  blockedmemorypool.cpp  blockedmemorypool.h  chatlogmanager.cpp  chatlogmanager.h  clientconnection.cpp  clientconnection.h  config.cpp  config.h  default.cfg  fxcjson.cpp  fxcjson.h  fxmessage.cpp  fxmessage.h  fxserver.cpp  fxserver.h  linearmemorypool.cpp  linearmemorypool.h  main.cpp  memory.h  memorypool.h  mysqlconnectionpool.cpp  mysqlconnectionpool.h  mysqlconnector.cpp  mysqlconnector.h  serverlistener.cpp  serverlistener.h  user.cpp  user.h  usermanager.cpp  usermanager.h  usersession.cpp  usersession.h
server/src/fxutils/: CMakeLists.txt  stringutils.h
server/src/mysqlmappers/: CMakeLists.txt  abstractmysqlmapper.h
server/tests/: CMakeLists.txt  blockedmemorypooltest.h  fxcjsontest.h  fxmessagetest.h  linearmemorypooltest.h  main.cpp  memorypooltest.h  memorytest.h  mysqlconnectortest.h  spdlogtest.h  usermanagertest.h
